--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lru-cache": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "rimraf": "^6.0.1",
