--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "rimraf": "^6.0.1",
     "uuid": "^11.0.5"
   },
