--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "rimraf": "^6.0.1",
     "uuid": "^11.0.5"
   },
